--- a/src/components/EventType/eventType.css
+++ b/src/components/EventType/eventType.css
@@ -1,45 +1,40 @@
-.event-type-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-.event-type-header-div {
-  position: fixed;
-  top: 0;
-  background-color: darkseagreen;
-}
-
-::-webkit-scrollbar {
-  background: none;
-}
-
-.event-type-header-div > h1 {
-  position: fixed;
-  top: 0;
-  padding: 10px;
-  color: white;
-  background-color: yellowgreen;
-  text-align: center;
-}
-
-.event-type-list-main-div {
-  margin-top: 2em;
-  max-height: 300px;
+.event-type-div{
+  min-width: 200px;
+  max-height: 600px;
+  min-height: 600px;
   overflow: auto;
 }
 
-ul,
-li {
-  margin: 1em;
-  padding: 1px 3px;
-  background-color: rgb(192, 183, 183);
+.event-type-list-main-div{
+  border: solid 1px gray;
+  border-right: none;
 }
 
-.event-list-div {
-  padding-top: 1em;
+.event-type-header-div {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  background-color: blue;
+  padding: 10px;
 }
-.event-list-div > div > li {
+
+h1 {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+}
+
+ul,li {
   list-style: none;
+  margin: 0px;
+  padding: 10px 10px;
+  text-align: center;
+  background-color: rgb(241, 237, 244);;
+  cursor: pointer;
+}
+
+li:hover{
+  background-color: blue;
+  font-weight: bold;
+  color: white;
 }
